service/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flakey
  name: 'flakey${deployment-suffix}'
  namespace: flakey
spec:
  replicas: '${ #toInt(replicas) }'
  selector:
    matchLabels:
      app: flakey
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: '8000'
        prometheus.io/scrape: 'true'
      labels:
        app: flakey
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: 'config${config-suffix}'
          image: 'bestriped/flakey-test:0.5'
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /ping
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 1
          name: flakey
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 64Mi
      nodeSelector:
        app: worker
