service/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flakey
  namespace: flakey
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: flakey.stg.diginf.musicradio.com
      http:
        paths:
          - backend:
              serviceName: flakey
              servicePort: 8000
            path: /
